--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3.8'
 
 services:
   python-app:
-    image: techcat/n-search-pycon:6.4.2
+    image: techcat/n-search-pycon:6.5.15
     container_name: python_container
     depends_on:
       - mysql
     ports:
       - "3000:3000"
-      - "3001:3001"
+    volumes:
+      - ask_models:/app/models
 
   mysql:
     image: mysql:8.0
@@ -24,3 +25,4 @@ services:
 
 volumes:
   mysql_data:
+  ask_models:
